initial extension set up

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <h1>Generate New Data</h1>
-    <button id="clickMe">Run</button>
+    <h1>Perform fingerprint wipe</h1>
+    <button id="clickMe">Generate new values</button>
+    <button id="data">Current Data</button>
     <script src="popup.js"></script>
 </body>
 </html>
