navigator values spoofing complete

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,8 +8,17 @@
 </head>
 <body>
     <h1>Perform fingerprint wipe</h1>
-    <button id="clickMe">Generate new values</button>
-    <button id="data">Current Data</button>
+
+    <div class="buttons">
+        <button id="generate">Generate new values</button>
+        <button id="get_data">Current Data</button>
+    </div>
+    
+
+    <div id="output_window">
+        <h2>Current Values</h2>
+    </div>
+
     <script src="popup.js"></script>
 </body>
 </html>
