--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <h1>Perform fingerprint wipe</h1>
+    <h1>Perform Fingerprint Wipe</h1>
 
     <div class="buttons">
         <button id="generate">Generate new values</button>
